# Python_Arbitrage_bot

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  app.sh  config.json  docker-compose.yaml  error.sh  gitleaks.toml  log1.txt  path_finder.py  pyproject.toml  run.sh  skaffold.yaml  tbump.toml
.github/workflows/: release.yaml
charts/arbitrage/: Chart.yaml  ETH_L2-config_list.yaml  config_list.yaml  values.yaml
charts/arbitrage/templates/: NOTES.txt  _helpers.tpl  cron.yaml  deployment.yaml  hpa.yaml  serviceaccount.yaml
configs/: TEST_base_config.json  agnt_usd_sol_base.json  arbitrum_config.json  base_config.json  base_gno_config.json  celo_config.json  gno_sol_config.json  mainnet_config.json  op_arbitrum_config.json  op_config.json  op_gno_config.json  polygon_config.json  polygon_gnosis_config.json  solana_config.json  wolf_weth_sol_base.json
olas_arbitrage/: cli.py  constants.py  erc_20_token.py  exceptions.py  reporting.py  strategy.py  test.py  utils.py
olas_arbitrage/aea_contracts_solana/: Makefile
olas_arbitrage/exchanges/: balancer.py  balancer_optimised.py  balancer_simple.py  base.py  jupitar_exchange.py  uniswap_router.py  uniswap_v2.py
scripts/: bridge.py  config_analyser.py  config_generator.py  qa.py  reporting.sh  solana_reporting.py  test.py  test_smart_path _tx.py  test_smart_path.py  test_web3_ethereum_defi.py  validate_configs.fish
tests/: conftest.py  constants.py  local_fork.py  test_cli.py  test_exchanges.py  test_failures.py  test_local_fork.py  test_strategy.py  test_swaps.py
(+3 files in other folders)
